fix letter spacing issue

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -20,12 +20,6 @@ dl, dd, ol, ul, figure {
 body {
     font-family: $avenir;
     color: #232323;
-    -webkit-text-size-adjust: 100%;
-    -webkit-font-feature-settings: "kern" 1;
-    -moz-font-feature-settings: "kern" 1;
-    -o-font-feature-settings: "kern" 1;
-    font-feature-settings: "kern" 1;
-    font-kerning: normal;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
